<resources>
    <string name="app_name">美女拼图</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="load_more">加载更多。。</string>
    <string name="on_more_data">没有更多数据</string>
    <string name="step_num">步数：%1$d</string>
    <string name="timer_str">时间：%1$d 秒</string>
    <string name="btn_show_image">原图</string>
    <string name="btn_reset">重置</string>
    <string name="str_next_page">下一张</string>
</resources>
